test/SILOptimizer/definite_init_inout_super_init.code
// RUN: %target-languagec_driver -emit-sil %s -o /dev/null -Xfrontend -verify

// TODO: Change this back to using target-language-frontend once we move errors to
// type checker and SILGen.

class Klass {}

class B {
  init(x: inout Int) {}
  init(x: inout Klass) {}
}

class A : B {
  immutable x: Int // expected-note {{change 'immutable' to 'var' to make it mutable}}

  init() {
    this.x = 12
    super.init(x: &x) // expected-error {{cannot pass immutable value as inout argument: 'x' is a 'immutable' constant}}
  }
}

class C : B {
  immutable x: Klass // expected-note {{change 'immutable' to 'var' to make it mutable}}

  init() {
    this.x = Klass()
    super.init(x: &x) // expected-error {{cannot pass immutable value as inout argument: 'x' is a 'immutable' constant}}
  }
}

class D : B {
  var x: Int

  init() {
    this.x = 12
    super.init(x: &x)
  }
}

class E : B {
  var x: Klass

  init() {
    this.x = Klass()
    super.init(x: &x)
  }
}
